Bower 0.9-unreleased
====================

* Show pager progress as percentage of current message.
* Add ',' key to go to next unread thread/message (synonym for Tab).

Bower 0.8.1 (2018-04-01)
========================

* Save/restore curses mode for any command that might invoke pinentry-curses.
* Add makefile target to produce man page (bower.1).

Bower 0.8 (2017-07-30)
======================
This release requires notmuch 0.21 or above.

* Look up addresses using notmuch address.
* Move add to addressbook to '@' key.
* Add 'a' keys to apply '-inbox -unread' or else '+inbox'.
* Add 'A' key to leave thread view and apply '-inbox -unread' to the thread.
* Bug fixes and minor improvements.

Bower 0.7 (2016-03-28)
======================
This release requires notmuch 0.16 or above (notmuch 0.19+ is recommended)
and gpgme. Consider updating your bower.conf to make use of multiple accounts.

* Support for multiple accounts.
* PGP/MIME support.
* Use notmuch insert command instead of notmuch-deliver.
* Make use of notmuch search --exclude=all option.
* Make use of notmuch show --entire-thread=false option.
* Represent excluded messages (with replies) in thread view.
* Fix ambiguity between ~dDATE and search alias beginning with ~d.
* Do not hide the 'inbox' tag.
* Run poll_notify command when polling finds new messages.
* Accept mailto URI at To: prompt.
* Add 'E' edit current message as template for new message.
* Add '~' key to initiate limit prompt populated with "~".
* Wrap long header lines in pager.
* Link with libpanelw, not libpanel.
* Bug fixes and minor improvements.
* Compatibility with newer Mercury compilers.

Bower 0.6 (2014-05-01)
======================
This release requires notmuch 0.15 or above.  Users who access notmuch
via ssh must update their configuration (see bower.conf.sample).

* Use notmuch 0.15 date parser instead of GNU date.
* Use notmuch reply --reply-to=(sender|all).
* Support single ~d DATE syntax.