@@ -51,7 +51,9 @@
 :- pred get_poll_notify_command(prog_config::in, maybe(command_prefix)::out)
     is det.
 
-:- pred get_poll_period_secs(prog_config::in, maybe(int)::out) is det.
+:- pred get_index_poll_period_secs(prog_config::in, maybe(int)::out) is det.
+
+:- pred get_thread_poll_period_secs(prog_config::in, maybe(int)::out) is det.
 
 :- pred get_encrypt_by_default(prog_config::in, bool::out) is det.
 
@@ -121,7 +123,8 @@
                 open_part       :: string, % not shell-quoted
                 open_url        :: string, % not shell-quoted
                 poll_notify     :: maybe(command_prefix),
-                poll_period_secs :: maybe(int),
+                index_poll_period_secs :: maybe(int),
+                thread_poll_period_secs :: maybe(int),
                 encrypt_by_default :: bool,
                 sign_by_default :: bool,
                 decrypt_by_default :: bool,
@@ -243,10 +246,16 @@ make_prog_config(Config, ProgConfig, !Errors, !IO) :-
         PollNotify = no
     ),
 
-    ( search_config(Config, "index", "poll_period_secs", Value) ->
-        check_poll_period_secs(Value, PollPeriodSecs, !Errors)
+    ( search_config(Config, "index", "poll_period_secs", IndexPollSecs0) ->
+        check_poll_period_secs(IndexPollSecs0, IndexPollSecs, !Errors)
     ;
-        PollPeriodSecs = default_poll_period_secs
+        IndexPollSecs = default_poll_period_secs
+    ),
+
+    ( search_config(Config, "thread", "poll_period_secs", ThreadPollSecs0) ->
+        check_poll_period_secs(ThreadPollSecs0, ThreadPollSecs, !Errors)
+    ;
+        ThreadPollSecs = default_poll_period_secs
     ),
 
     ( search_config(Config, "crypto", "encrypt_by_default", Encrypt0) ->
@@ -330,7 +339,8 @@ make_prog_config(Config, ProgConfig, !Errors, !IO) :-
     ProgConfig ^ open_part = OpenPart,
     ProgConfig ^ open_url = OpenUrl,
     ProgConfig ^ poll_notify = PollNotify,
-    ProgConfig ^ poll_period_secs = PollPeriodSecs,
+    ProgConfig ^ index_poll_period_secs = IndexPollSecs,
+    ProgConfig ^ thread_poll_period_secs = ThreadPollSecs,
     ProgConfig ^ encrypt_by_default = EncryptByDefault,
     ProgConfig ^ sign_by_default = SignByDefault,
     ProgConfig ^ decrypt_by_default = DecryptByDefault,
@@ -645,8 +655,11 @@ get_open_url_command(Config, Command) :-
 get_poll_notify_command(Config, Command) :-
     Command = Config ^ poll_notify.
 
-get_poll_period_secs(Config, PollPeriodSecs) :-
-    PollPeriodSecs = Config ^ poll_period_secs.
+get_index_poll_period_secs(Config, PollPeriodSecs) :-
+    PollPeriodSecs = Config ^ index_poll_period_secs.
+
+get_thread_poll_period_secs(Config, PollPeriodSecs) :-
+    PollPeriodSecs = Config ^ thread_poll_period_secs.
 
 get_encrypt_by_default(Config, EncryptByDefault) :-
     EncryptByDefault = Config ^ encrypt_by_default.
