@@ -1,8 +1,9 @@
 Bower 0.9-unreleased
 ====================
 
-* Show pager progress as percentage of current message.
 * Add ',' key to go to next unread thread/message (synonym for Tab).
+* thread/pager: Show pager progress as percentage of current message.
+* thread/pager: Periodically poll for new messages in current thread.
 
 Bower 0.8.1 (2018-04-01)
 ========================
